# foxtail

./: .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .isort.cfg  .percy.yml  .pre-commit-config.yaml  .pyup.yml  .stylelintrc.json  Dockerfile  LICENSE  Procfile  biome.json  compose.override.yaml  compose.prod-local.yaml  compose.prod.yaml  compose.test.yaml  compose.yaml  conftest.py  deployment.md  docker-compose.yml  entrypoint.sh  manage.py  package-lock.json  package.json  percy.yml  pyproject.toml  pytest.ini  readme.md  requirements.txt  tox.ini  vite.config.mjs  webpack.common.js  webpack.dev.js  webpack.prod.js
.circleci/: config.yml  requirements.txt
.do/: app.yaml
.github/: dependabot.yml
.github/workflows/: build.yml  cleanup.yml  inspect.yml  pre-commit.yml  scorecard.yml  sentry.yml  test.yml
apps/accounts/: admin.py  apps.py  authentication.py  claims.py  decorators.py  forms.py  models.py  tests.py  urls.py  validators.py  views.py
apps/accounts/forms/: allauth.py
apps/accounts/migrations/: 0001_initial.py  0001_initial_squashed.py  0001_squashed_0008_remove_user_gender.py  0002_add_dob.py  0002_add_username_blacklist.py  0003_add_gender.py  0004_add_full_name.py  0005_merge_names.py  0006_username_spaces.py  0007_remove_user_profile_url.py  0008_remove_user_gender.py
apps/accounts/templates/: account_base.html  account_nav.html  consent_list.html  profile.html
apps/accounts/tests/: factories.py  test_claims.py  test_forms.py  test_models.py  test_responses.py  test_socialadapter.py  test_urls.py  test_views.py
apps/admin/: admin.py
apps/blog/: admin.py  apps.py  feeds.py  models.py  signals.py  sitemaps.py  tests.py  urls.py  views.py
apps/blog/migrations/: 0001_initial.py  0002_pre-render_markdown.py
apps/blog/templates/: blog_detail.html  blog_list.html  sidebar.html
apps/contact/: apps.py  forms.py  urls.py  views.py
apps/contact/templates/: contact.html
apps/content/: __init__.py  admin.py  models.py  sitemaps.py  tests.py  urls.py  views.py
apps/content/migrations/: 0001_initial.py  0002_markdownfield_squashed.py  0002_pre-render_markdown.py  0002_typo.py  0003_remove_fields.py  0003_rendered_field.py
apps/content/templates/: base.html  index.html  page.html
apps/content/tests/: factories.py  test_models.py  test_responses.py  test_urls.py  test_views.py
apps/core/: admin.py  apps.py  context_processors.py  email.py  fields.py  signals.py  storages.py  views.py
apps/core/templatetags/: avatar.py  icon.py  markdownify.py  recaptcha.py  render_bundle_csp.py  sortable.py  url_transform.py
apps/core/tests/: test_urls.py  test_views.py
apps/directory/: __init__.py  admin.py  apps.py  constants.py  fields.py  forms.py  mixins.py  models.py  rules.py  signals.py  urls.py  validators.py  views.py
apps/directory/migrations/: 0001_initial.py  0001_initial_squashed.py  0002_defuck_everything.py  0003_profile_profile_url.py  0004_add_fields.py  0004_profile_region.py  0005_auto_20191227_2003.py  0005_privacy_rules.py  0006_auto_20200103_2126.py  0006_privacy_two.py  0007_privacy.py  0008_dob_privacy.py  0009_alter_character_options.py
apps/directory/models/: base.py  character.py  profile.py
apps/directory/templates/: character_list.html
apps/directory/templatetags/: permissions.py
apps/directory/tests/: factories.py  test_models.py  test_urls.py
apps/directory/views/: __init__.py  character.py  directory.py  list.py  profile.py
apps/email/: apps.py
apps/events/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
apps/users/: admin.py  authentication.py  models.py  signals.py  urls.py  views.py
assets/js/: adminFormset.js  autocomplete.js  cropWidget.js  csrf.js  dialog.js  eventInterest.js  eventTicketTiers.js  imageWidget.js  main.js  manageFormset.js  manageFormset.test.js  map.js  profileEdit.js  profile_edit.js
assets/scss/: _auth.scss  _base.scss  _blog.scss  _components.scss  _custom.scss  _dashboard.scss  _error.scss  _events.scss  _fonts.scss  _footer.scss  _forms.scss  _header.scss  _hero.scss  _home.scss  _icons.scss  _layout.scss  _markdown.scss  _mixins.scss  _organisations.scss  _palettes.scss  _sidebar.scss  _theme-glass.scss  _theme-retro.scss  _theme-sharp.scss  _theme-terminal.scss  index.scss  tables.scss
assets/static/: site.webmanifest
deploy/: .env.example  Caddyfile  README.md  compose.yaml
deploy/caddy/: Caddyfile  compose.yaml
deploy/foxtail/: .env.example  compose.yaml
deploy/prod/: .env.example  compose.yaml
deploy/scripts/: deploy-prod.sh  deploy-staging.sh
deploy/staging/: .env.example  compose.yaml
foxtail/: settings.py  urls.py  wsgi.py
requirements/: base.txt  dev.txt  test.txt
scripts/: build_fonts.py
src/: conftest.py  manage.py
src/bot/: action_handlers.py  dispatcher.py  listener.py  middleware.py  run.py  settings.py
src/foxtail/: settings.py  urls.py  utils.py
src/templates/: 400.html  403.html  403_csrf.html  404.html  429.html  500.html  500_static.html  auth_base.html  base.html  shell_base.html
src/tests/: test_account_creation.py  test_basics.py  test_blog.py  test_contact.py  test_email.py  test_password_reset.py
templates/: 400.html  403.html  500.html  base.html
templates/account/: email.html  login.html  password_change.html  password_reset.html  password_set.html  signup.html
templates/admin/: base_site.html  index.html
templates/blog/: comment_delete.html  comments.html  detail.html  list.html  sidebar.html
templates/components/: footer.html  header.html  messages.html  nav.html  pagination.html  provider_list.html  publish_status.html
templates/contact/: contact.html
templates/error_pages/: 400.html
templates/foxtail_blog/: detail.html  list.html  sidebar.html
templates/oidc_provider/: authorize.html  check_session_iframe.html  error.html
templates/socialaccount/: connections.html
tests/: conftest.py  data.json  requirements.txt  test_account_creation.py  test_basics.py  test_blog.py  test_contact.py
webpack/: common.js  common.mjs  dev.js  dev.mjs  prod.js  prod.mjs
(+575 files in other folders)
