[project]
name = "foxtail"
version = "0.0.0"
requires-python = ">=3.13, <3.14"
dependencies = [
    "argon2-cffi==25.1.0",
    "django==5.2.12",
    "django-allauth[mfa,idp-oidc]==65.15.0",
    "django-anymail[mailgun]==14.0",
    "django-cjswidget==0.5.0",
    "django-cleanup==9.0.0",
    "django-cotton==2.6.2",
    "django-csp==4.0",
    "django-vite==3.1.0",
    "django-csp-helpers==1.0.1",
    "django-environ==0.13.0",
    "django-imagefield[vips]==0.23.0a3",
    "mjml-python==1.3.7",
    "django-markdownfield==0.13.2",
    "django-published==0.10.0",
    "django-redis==6.0.0",
    "huey",
    "django-storages[s3]==1.14.6",
    "django-structured-data==0.12.0",
    "django-taggit==6.1.0",
    "django-widget-tweaks==1.5.1",
    "fido2==2.1.1",
    "gunicorn==25.1.0",
    "icalendar==7.0.3",
    "markdown==3.10.2",
    "psycopg[binary]==3.3.3",
    "pyjwt==2.12.1",
    "pymdown-extensions==10.21",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "rules==3.5",
    "segno==1.6.6",
    "sentry-sdk==2.55.0",
    "unidecode==1.4.0",
    "whitenoise==6.12.0",
    "django-solo>=2.4.0",
    "django-formguard>=0.7.1",
]

[dependency-groups]
dev = [
    "debugpy==1.8.20",
    "django-debug-toolbar==6.2.0",
    "factory-boy==3.3.3",
    "faker==40.11.0",
]
test = [
    { include-group = "dev" },
    "feedparser==6.0.12",
    "coverage==7.13.5",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-django==4.12.0",
    "pytest-factoryboy==2.8.1",
    "pytest-xdist==3.8.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "foxtail.settings"
pythonpath = ["src"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
norecursedirs = ["node_modules", ".git", ".tox", "storage", "_stashed"]
markers = ["keep_rate_limits: opt out of the autouse rate-limit disabling fixture"]

[tool.coverage.run]
source = ["apps"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]

extend-exclude = [
    "node_modules",
    "storage",
    "build",
    "**/migrations/*",
]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "UP",        # pyupgrade
    "S",         # bandit/security
    "DJ",        # django
    "A",         # flake8-builtins
    "B",         # flake8-bugbear
    "C4",        # flake8-comprehensions
    "SIM",       # flake8-simplify
    "RUF",       # ruff-specific
    "PT",        # flake8-pytest-style
    "T20",       # flake8-print (no stray prints)
    "PIE",       # flake8-pie (misc. lints)
    "DTZ",       # flake8-datetimez (timezone-aware dates)
    "PTH",       # flake8-use-pathlib
    "BLE",       # flake8-blind-except
    "T10",       # flake8-debugger (no breakpoints)
    "LOG",       # flake8-logging
    "ISC",       # flake8-implicit-str-concat
    "FLY",       # flynt (f-string migration)
    "FURB",      # refurb (modernization)
    "RET",       # flake8-return (clean control flow)
    "N",         # pep8-naming
    "C90",       # mccabe (cyclomatic complexity)
    "ERA",       # eradicate (commented-out code)
    "PGH",       # pygrep-hooks (precise suppressions)
    "RSE",       # flake8-raise (clean raise statements)
]
ignore = [
    "DJ008",   # model __str__ not required on every model
    "A005",    # stdlib module shadowing (e.g. apps/email is fine)
    "RUF012",  # mutable class attrs (false positive for Django)
    "SIM108",  # ternary operator (less readable in some cases)
    "RUF005",  # iterable unpacking (list concat is fine in settings)
    "SIM103",  # needless if/else return bool
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S"]
"**/conftest.py" = ["S"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
known-first-party = ["apps"]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
"django" = ["django"]
