[project]
name = "foxtail"
version = "0.0.0"
requires-python = ">=3.14, <3.15"
dependencies = [
    "argon2-cffi>=25.1",
    "django>=5.2.16,<6",
    "django-allauth[mfa,idp-oidc]>=65.17.0,<66",
    "django-anymail[mailgun]>=15.0,<16",
    "django-cleanup>=9.0",
    "django-cotton>=2.7.2",
    "django-csp>=4.0,<5",
    "django-vite>=3.1,<4",
    "django-csp-helpers>=1.0.3",
    "django-environ>=0.14.0,<1",
    "django-imagefield[vips]>=0.23.0a4",
    "mjml-python>=1.4.1",
    "django-markdownfield>=0.20.2",
    "django-published>=1.1",
    "django-redis>=6.0,<7",
    "huey",
    "django-storages[s3]>=1.14.6,<2",
    "django-structured-data>=0.13.4",
    "django-taggit>=6.1,<7",
    "fido2>=2.2.1",
    "gunicorn>=26.0.0,<27",
    "icalendar>=7.2.0",
    "markdown>=3.10",
    "psycopg[binary]>=3.3.4,<4",
    "pyjwt>=2.13.0,<3",
    "requests>=2.34.2",
    "requests-oauthlib>=2.0",
    "rules>=3.5",
    "segno>=1.6",
    "sentry-sdk>=2.64.0",
    "anyascii>=0.3",
    "whitenoise>=6.12,<7",
    "django-solo>=2.5",
    "django-formguard>=0.9.3",
    "django-unfold>=0.100.0",
    "django-fetch-metadata>=0.1",
    "shortuuid>=1.0.13",
]

[dependency-groups]
dev = [
    "debugpy==1.8.21",
    "django-debug-toolbar==6.3.0",
    "django-fetch-metadata[toolbar]>=0.2.1",
    "factory-boy==3.3.3",
    "faker==40.28.1",
]
test = [
    { include-group = "dev" },
    "feedparser==6.0.12",
    "coverage==7.15.0",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "pytest-django==4.12.0",
    "pytest-factoryboy==2.8.1",
    "pytest-xdist==3.8.0",
    "hypothesis>=6.156.4",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "foxtail.settings"
pythonpath = ["src"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
norecursedirs = ["node_modules", ".git", ".tox", "storage", "_stashed"]
markers = ["keep_rate_limits: opt out of the autouse rate-limit disabling fixture"]

[tool.coverage.run]
source = ["apps"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]

extend-exclude = [
    "node_modules",
    "storage",
    "build",
    "**/migrations/*",
]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "UP",        # pyupgrade
    "S",         # bandit/security
    "DJ",        # django
    "A",         # flake8-builtins
    "B",         # flake8-bugbear
    "C4",        # flake8-comprehensions
    "SIM",       # flake8-simplify
    "RUF",       # ruff-specific
    "PT",        # flake8-pytest-style
    "T20",       # flake8-print (no stray prints)
    "PIE",       # flake8-pie (misc. lints)
    "DTZ",       # flake8-datetimez (timezone-aware dates)
    "PTH",       # flake8-use-pathlib
    "BLE",       # flake8-blind-except
    "T10",       # flake8-debugger (no breakpoints)
    "LOG",       # flake8-logging
    "ISC",       # flake8-implicit-str-concat
    "FLY",       # flynt (f-string migration)
    "FURB",      # refurb (modernization)
    "RET",       # flake8-return (clean control flow)
    "N",         # pep8-naming
    "C90",       # mccabe (cyclomatic complexity)
    "PGH",       # pygrep-hooks (precise suppressions)
    "RSE",       # flake8-raise (clean raise statements)
]
ignore = [
    "DJ008",   # model __str__ not required on every model
    "A005",    # stdlib module shadowing (e.g. apps/email is fine)
    "RUF012",  # mutable class attrs (false positive for Django)
    "SIM108",  # ternary operator (less readable in some cases)
    "RUF005",  # iterable unpacking (list concat is fine in settings)
    "SIM103",  # needless if/else return bool
    "RET504",  # unnecessary assignment before return
    "RET505",  # unnecessary else after return
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S"]
"**/conftest.py" = ["S"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
known-first-party = ["apps", "bot"]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
"django" = ["django"]
